確定時間對存貨量有影響，並重新確定LGBM為最適合的模型，接下來步驟請看readme

--- a/readme
+++ b/readme
@@ -3,3 +3,9 @@
 2. 預測甚麼商品在哪個國家的第幾季度大概會賣多少數量
 
 模型大失敗，感覺過擬合了，cv表現不錯，但是test set表現很糟，應該使用早停機制。或者把資料切成兩個年份個別訓練
+
+10/10 放棄超大模型，先檢驗購買數量與時間是否具有相關性，如果沒有，就把時間拿掉，然後取小樣本來訓練一個通用的模型(先看季度)
+
+10/11 根據下面檢驗結果以及PCA，得出時間與數量有顯著關係，不能排除
+Mann_Kendall_Test(trend='increasing', h=True, p=0.0004475419164089445, z=3.5103353271128808, Tau=0.009993680240055548, s=14231984.0, var_s=16437418904082.0, slope=0.0, intercept=3.0)
+***忽然有個方向，用國家去製作多模型，先篩選出資料筆數超過1000筆的國家，然後用多重迴圈儲存多國模型，以達到降低資料筆數，同時能保證模型有效性
